reglage bug burger btn(delete animation) + alignage de search-bar et search-result

--- a/styles/index.css
+++ b/styles/index.css
@@ -86,42 +86,15 @@ header {
 /* Bouton burger */
 .menu-toggle {
   display: none; /* caché sur desktop */
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 22px;
   background: none;
   border: none;
+  font-size: 2rem;  /* taille du symbole */
+  color: #00ffcc;
   cursor: pointer;
-  z-index: 1101; /* au-dessus de la sidebar */
   position: fixed;
-  top: 20px;
-  left: 20px;
-}
-
-.menu-toggle span {
-  display: none;
-  height: 3px;
-  background-color: #00ffcc;
-  border-radius: 2px;
-  transition: all 0.3s ease;
-}
-
-/* Animation burger → croix */
-.menu-toggle.active span:nth-child(1) {
-  transform: rotate(47deg) translate(5px, 5px);
-  width: 28px;   /* légèrement plus long pour que ça dépasse un peu */
-  transform-origin: center; /* assure que la rotation se fait depuis le centre */
-}
-
-.menu-toggle.active span:nth-child(2) {
-  opacity: 0;
-}
-
-.menu-toggle.active span:nth-child(3) {
-  transform: rotate(-47deg) translate(5px, -5px);
-  width: 28px;
-  transform-origin: center; /* assure que la rotation se fait depuis le centre */
+  top: 15px;
+  left: 15px;
+  z-index: 9999;
 }
 
 
@@ -237,7 +210,6 @@ header {
     scrollbar-color: #000000 transparent; /* couleur barre / fond */
 }
 
-
 .search-item {
     display: flex;
     align-items: center;
@@ -268,7 +240,6 @@ header {
     color: #00b3b3;
     margin-top: 3px;
 }
-
 
 .search-item:hover {
     background-color: #0d0d0d; /* effet hover subtil */
